# amuse-core

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/: core.hpp  dll.hpp  format.hpp  logger.hpp
include/core/: component.hpp  graphic_manager.hpp  input.hpp  math.hpp
include/core/components/: transform.hpp
include/core/gfx/: gl.hpp  texture.hpp
include/imgui/: imconfig.h
src/core/: actor.cpp  mat4.cpp  quat.cpp
src/core/gfx/: gl.cpp  mesh.cpp
